main/geth.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth
  labels:
    app: geth
spec:
  ports:
  - name: rpc
    port: 8545
    targetPort: 8545
  - name: discovery
    port: 30303
    targetPort: 30303
  selector:
    app: geth
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: geth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: geth
    spec:
      containers:
      - image: ethereum/client-go:v1.8.3
        name: geth
        command: ["geth"]
        args:
          - "--datadir=/mnt"
          - "--rpc"
          - "--rpcaddr=0.0.0.0"
        ports:
        - containerPort: 8545
        - containerPort: 30303
        volumeMounts:
        - name: efs-geth
          mountPath: /mnt
        resources:
          requests:
            cpu: "10m"
            memory: "5.5Gi"
      volumes:
      - name: efs-geth
        persistentVolumeClaim:
          claimName: efs
