main/ingress-redirect.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redirects
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($uri ~* /) {
        return 301 https://blockpaste.com;
      }
spec:
  rules:
  - host: www.blockpaste.com
